name:        arivi
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  build-depends:       base >=4.9 && <4.10
                    ,  async
                    ,  network >= 2.6.3.4
                    ,  stm >= 2.4.4.1
                    ,  bytestring
                    ,  split
                    ,  containers
                    ,  uuid
                    ,  monad-logger
                    ,  text
                    ,  cryptonite >= 0.23
                    ,  memory >= 0.14.11
                    ,  raaz >= 0.1.1
                    ,  base16-bytestring
                    ,  unordered-containers <= 0.2.9.0
  hs-source-dirs:      src
  exposed-modules:     Arivi.Network.Datagram
                       Arivi.Network.Stream
                       Arivi.Network.Types
                       Arivi.Network.NetworkClient
                       Arivi.Network.Multiplexer
                       Arivi.Network.Instance
                       Arivi.Network.Session
                       Arivi.Crypto.Utils.Keys.Encryption
                       Arivi.Crypto.Utils.Random
  default-language:    Haskell2010
