name:        arivi
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  build-depends:       base >=4.9 && <4.10
                    ,  async
                    ,  network
                    ,  stm >= 2.4.4.1
                    ,  bytestring
                    ,  split
                    ,  containers
                    ,  uuid
                    ,  monad-logger
                    ,  text
                    ,  binary >= 0.8.3.0
                    ,  cryptonite >= 0.23
                    ,  memory >= 0.14.11
                    ,  raaz >= 0.1.1
                    ,  base16-bytestring
                    ,  unordered-containers <= 0.2.9.0
                    ,  configurator >= 0.3.0.0
                    ,  serialise
                    ,  time
                    ,  bytes
                    ,  base16-bytestring
                    ,  crypto-api
                    ,  integer-gmp
                    ,  monad-logger
                    ,  random
                    ,  hashtables <= 1.2.6.1
  hs-source-dirs:      src
  exposed-modules:
                       Arivi.Crypto.Hashing.Blake2b_512
                       Arivi.Crypto.Cipher.AES256
                       Arivi.Crypto.Cipher.ChaChaPoly1305
                       Arivi.Crypto.Utils.IES
                       Arivi.Crypto.Utils.Keys.Encryption
                       Arivi.Crypto.Utils.Keys.Signature
                       Arivi.Crypto.Utils.PublicKey.Signature
                       Arivi.Crypto.Utils.PublicKey.Encryption
                       Arivi.Crypto.Utils.PublicKey.Utils
                       Arivi.Crypto.Utils.Random
                       Arivi.Kademlia.Instance
                       Arivi.Kademlia.Node
                       Arivi.Kademlia.Query
                       Arivi.Kademlia.Random
                       Arivi.Kademlia.Signature
                       Arivi.Kademlia.Types
                       Arivi.Kademlia.XorDistance
                       Arivi.Network.Connection
                       Arivi.Network.Datagram
                       Arivi.Network.Fragmenter
                       Arivi.Network.FrameDispatcher
                       Arivi.Network.FSM
                       Arivi.Network.HashMapManager
                       Arivi.Network.Instance
                       Arivi.Network.NetworkClient
                       Arivi.Network.Reassembler
                       Arivi.Network.Stream
                       Arivi.Network.Types
                       Arivi.Network.Utils
                       -- Arivi.P2P.FSM
                       Arivi.P2P.PubSub
                       Arivi.P2P.ServiceRegistry
                       Arivi.P2P.Types
                       Arivi.Utils.Utils

  default-language:    Haskell2010
