name:                crypto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xoken/xoken-core/blob/master/crypto/README.md
license:             
license-file:        LICENSE
author:              Mahesh Uligade
maintainer:          maheshsuligade@gmail.com
copyright:           2018 Xoken Labs
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      . 
  exposed-modules:     Crypto.Hashing.Blake2b_512
                       Crypto.Utils.IES 
                       Crypto.Utils.Random 
                       Crypto.Utils.Keys.Encryption
                       Crypto.Utils.Keys.Signature  
  build-depends:       base >= 4.7 && < 5
                    ,  cryptonite
                    ,  raaz 
                    ,  bytestring 
                    ,  memory
                    ,  base16-bytestring 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xoken/xoken-core/tree/master/crypto
