name:                kademlia
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/kademlia#readme
license:             BSD3
license-file:        LICENSE
author:              Ankit Singh 
maintainer:          example@example.com
copyright:           2018 XokenLabs 
category:            Network 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kademlia.Node
                       Kademlia.Query 
                       Kademlia.Types 
                       Kademlia.Utils 
                       Kademlia.XorDistance 
                       
  build-depends:       base >= 4.7 && < 5
                    ,  configurator >= 0.3.0.0
                    ,  network
                    ,  random
                    ,  async
                    ,  bytestring
                    ,  text
                    ,  split >= 0.1.2.3
                    ,  containers
                    ,  stm  
                    ,  serialise
                    ,  time 
                    ,  bytes 
                    ,  memory 
                    ,  base16-bytestring 
                    ,  crypto-api 
                    ,  integer-gmp
                    ,  cryptonite 
                    ,  crypto
                    ,  monad-logger

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/kademlia
