name:        arivi-crypto
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  build-depends:       base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytestring
                    ,  cryptonite >= 0.23
                    ,  memory >= 0.14.11
                    ,  raaz >= 0.2.1

  ghc-options:  -Wall -Werror  -Wredundant-constraints -fno-defer-type-errors -fno-defer-out-of-scope-variables
  exposed-modules:
                       Arivi.Crypto.Hashing.Blake2b_512
                       Arivi.Crypto.Cipher.AES256
                       Arivi.Crypto.Cipher.ChaChaPoly1305
                       Arivi.Crypto.Utils.IES
                       Arivi.Crypto.Utils.Keys.Encryption
                       Arivi.Crypto.Utils.Keys.Signature
                       Arivi.Crypto.Utils.PublicKey.Signature
                       Arivi.Crypto.Utils.PublicKey.Encryption
                       Arivi.Crypto.Utils.PublicKey.Utils
                       Arivi.Crypto.Utils.Random

  default-language:    Haskell2010
