name:        arivi-network
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  build-depends:       async
                    ,  base >=4.9 && <4.10
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytes
                    ,  bytestring
                    ,  containers
                    ,  cryptonite >= 0.23
                    ,  exceptions
                    ,  hashtables <= 1.2.6.1
                    ,  memory >= 0.14.11
                    ,  monad-logger
                    ,  mtl
                    ,  network
                    ,  random
                    ,  serialise
                    ,  split
                    ,  stm >= 2.4.4.1
                    ,  template-haskell
                    ,  text
                    ,  time
                    ,  timers-updatable <= 0.2.0.2
                    ,  unordered-containers <= 0.2.9.0
                    ,  uuid
                    ,  arivi-kademlia
                    ,  arivi-crypto
  ghc-options:         -Wall -fno-defer-type-errors -fno-defer-out-of-scope-variables
  exposed-modules:                     
                       Arivi.Network.Connection
                       Arivi.Network.Datagram
                       Arivi.Network.Fragmenter
                       Arivi.Network.FrameDispatcher
                       Arivi.Network.FSM
                       Arivi.Network.Handshake
                       Arivi.Network.HandshakeUtils
                       Arivi.Network.HashMapManager
                       Arivi.Network.Instance
                       Arivi.Network.NetworkClient
                       Arivi.Network.OutboundDispatcher
                       Arivi.Network.Reassembler
                       Arivi.Network.StreamClient
                       Arivi.Network.StreamServer
                       Arivi.Network.Types
                       Arivi.Network.Utils
                       Arivi.AppM
                       Arivi.Env
                       Arivi.Logging
                       Arivi.NetworkException

  default-language:    Haskell2010
