name:        arivi-p2p
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  hs-source-dirs: lib
  build-depends:       async
                    ,  base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytes
                    ,  bytestring
                    ,  configurator >= 0.3.0.0
                    ,  containers
                    ,  crypto-api
                    ,  cryptonite >= 0.23
                    ,  exceptions
                    ,  fast-logger
                    ,  hashtables <= 1.2.6.1
                    ,  integer-gmp
                    ,  lifted-base
                    ,  lifted-async <= 0.10.0.2
                    ,  memory >= 0.14.11
                    ,  monad-control
                    ,  monad-logger
                    ,  mtl
                    ,  network
                    ,  raaz >= 0.1.1
                    ,  random
                    ,  serialise
                    ,  split
                    ,  stm >= 2.4.5
                    ,  template-haskell
                    ,  text
                    ,  time
                    ,  timers-updatable <= 0.2.0.2
                    ,  unordered-containers <= 0.2.9.0
                    ,  uuid
                    ,  arivi-network
                    ,  arivi-crypto
                    ,  arivi-utils
                    ,  hashable
                    ,  stm-containers >= 0.2.16
                    ,  list-t >= 1.0.0.1
                    ,  either-unwrap >= 1.1
                    ,  sorted-list
                    ,  string-conv
                    ,  yaml
  ghc-options:         -Wall -Werror -fno-defer-type-errors -fno-defer-out-of-scope-variables
  default-extensions:  FlexibleContexts
  exposed-modules:
                      --  Arivi.P2P.PubSub
                      --  Arivi.P2P.Instance
                       Arivi.P2P.ServiceRegistry
                       Arivi.P2P.Types
                       Arivi.P2P.P2PEnv
                       Arivi.P2P.Exception
                       Arivi.P2P.MessageHandler.Handler
                       Arivi.P2P.MessageHandler.HandlerTypes
                       Arivi.P2P.Kademlia.Types
                       Arivi.P2P.Kademlia.XorDistance
                       Arivi.P2P.Kademlia.Utils
                       Arivi.P2P.RPC.Functions
                       Arivi.P2P.RPC.Types
                       Arivi.P2P.PubSub.Types
                       Arivi.P2P.RPC.SendOptions
                       Arivi.P2P.Kademlia.Kbucket
                       Arivi.P2P.Kademlia.MessageHandler
                       Arivi.P2P.Kademlia.LoadDefaultPeers
                       Arivi.P2P.Kademlia.RefreshKbucket
                       Arivi.P2P.PRT.Types
                       Arivi.P2P.PubSub.Functions
  default-language:    Haskell2010

executable Main
  main-is: Main.hs
  hs-source-dirs:
      exe
  default-language: Haskell2010
  ghc-options:      -threaded -O1 +RTS -N -RTS
  default-extensions:          FlexibleContexts
  build-depends:     async
                  ,  base >=4.9 && <4.11
                  ,  directory
                  ,  bytestring
                  ,  hashtables <= 1.2.6.1
                  ,  lifted-async
                  ,  monad-logger
                  ,  mtl
                  ,  stm >= 2.4.4.1
                  ,  time
                  ,  arivi-crypto
                  ,  arivi-utils
                  ,  arivi-network
                  ,  network
                  ,  arivi-p2p
                  , text
                  , yaml
                  , cryptonite
                  , memory
                  , string-conv
  other-modules: CreateConfig


test-suite arivi-p2p-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options:      -threaded -O1 +RTS -N -RTS
  default-extensions:          FlexibleContexts
  build-depends:     async
                  ,  base >=4.9 && <4.11
                  ,  directory
                  ,  bytestring
                  ,  hashtables <= 1.2.6.1
                  ,  lifted-async
                  ,  monad-logger
                  ,  mtl
                  ,  stm >= 2.4.4.1
                  ,  time
                  ,  arivi-crypto
                  ,  arivi-utils
                  ,  arivi-network
                  ,  network
                  ,  arivi-p2p
                  , text
                  , yaml
                  , cryptonite
                  , memory
                  , string-conv
  other-modules: CreateConfig

