name:        arivi-p2p
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  hs-source-dirs: lib
  build-depends:       async
                    ,  base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytes
                    ,  bytestring
                    ,  containers
                    ,  cryptonite >= 0.23
                    ,  exceptions
                    ,  lens
                    ,  lifted-base
                    ,  lifted-async <= 0.10.0.2
                    ,  memory >= 0.14.11
                    ,  monad-control
                    ,  monad-logger
                    ,  mtl
                    ,  network
                    ,  random
                    ,  serialise
                    ,  split
                    ,  stm >= 2.4.5
                    ,  text
                    ,  time
                    ,  unordered-containers <= 0.2.9.0
                    ,  uuid
                    ,  hashable
                    ,  stm-containers >= 0.2.16 && < 1
                    ,  list-t >= 1.0.0.1
                    ,  either-unwrap >= 1.1
                    ,  sorted-list
                    ,  string-conv
                    ,  aeson >= 1.4.0.0
                    ,  leveldb-haskell >= 0.6.5
                    ,  data-default >= 0.7.1.1
                    ,  resourcet >= 1.2.1
                    ,  unliftio-core >= 0.1.2.0
                    ,  yaml
                    ,  arivi-network
                    ,  arivi-crypto
                    ,  arivi-utils
  ghc-options:  -Wall -Werror  -Wredundant-constraints -fno-defer-type-errors -fno-defer-out-of-scope-variables
  default-extensions:  FlexibleContexts
  exposed-modules:
                       Arivi.P2P
                       Arivi.P2P.Config
                       Arivi.P2P.Exception
                       Arivi.P2P.Handler
                       Arivi.P2P.Kademlia.LoadDefaultPeers
                       Arivi.P2P.MessageHandler.HandlerTypes
                       Arivi.P2P.P2PEnv
                       Arivi.P2P.PubSub.Env
                       Arivi.P2P.PubSub.Class
                       Arivi.P2P.PubSub.Publish
                       Arivi.P2P.PubSub.Types
                       Arivi.P2P.ServiceRegistry
                       Arivi.P2P.Types
                       Arivi.P2P.LevelDB
                       Arivi.P2P.RPC.Env
                       Arivi.P2P.RPC.Fetch
                       Arivi.P2P.RPC.Types
  other-modules:
                       Arivi.P2P.Connection
                       Arivi.P2P.PeerMaintainer
                       Arivi.P2P.Kademlia.Kbucket
                       Arivi.P2P.Kademlia.MessageHandler
                       Arivi.P2P.Kademlia.RefreshKbucket
                       Arivi.P2P.Kademlia.RunConcurrently
                       Arivi.P2P.Kademlia.LoadReputedPeers
                       Arivi.P2P.Kademlia.Types
                       Arivi.P2P.Kademlia.Utils
                       Arivi.P2P.Kademlia.VerifyPeer
                       Arivi.P2P.Kademlia.XorDistance
                       Arivi.P2P.MessageHandler.NodeEndpoint
                       Arivi.P2P.MessageHandler.Utils
                       Arivi.P2P.PubSub.Handler
                       Arivi.P2P.PubSub.Notify
                       Arivi.P2P.PubSub.Subscribe
                       Arivi.P2P.PRT.Exceptions
                       Arivi.P2P.PRT.Instance
                       Arivi.P2P.PRT.Types
                       Arivi.P2P.RPC.Handler
                       Arivi.P2P.RPC.SendOptions
  default-language:    Haskell2010

executable Main
  main-is: Main.hs
  hs-source-dirs:
      exe
  default-language: Haskell2010
  ghc-options:      -threaded +RTS -N -RTS
  default-extensions:          FlexibleContexts
  build-depends:     async
                  , base >=4.9 && <4.11
                  , directory
                  , bytestring
                  , hashtables <= 1.2.6.1
                  , lifted-async
                  , monad-logger
                  , mtl
                  , stm >= 2.4.4.1
                  , time
                  , arivi-crypto
                  , arivi-utils
                  , arivi-network
                  , network
                  , arivi-p2p
                  , text
                  , cryptonite
                  , memory
                  , string-conv
