name:        service
version:     0.1.0.0
synopsis:    Services running on p2p.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Unknown
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  hs-source-dirs: lib
  build-depends:      
                        base >=4.9 && <4.11
                      , bytestring
                      , containers
                      , cryptonite
                      , hashable
                      , memory
                      , mtl
                      , random
                      , serialise
                      , text
                      , unordered-containers
                      , arivi-utils
                      , arivi-p2p
  ghc-options:         -Wall -Wredundant-constraints -Wincomplete-record-updates -Wincomplete-uni-patterns
  exposed-modules:
                         Service.HelloWorld
                       , Service.Types
                       , Block
                       , Ledger
                       , Node
                       , Transaction
                       , Types

  default-language:    Haskell2010

executable HelloWorldApp
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:  arivi-p2p
                , service
                , base >=4.9 && <4.11
                , yaml
                , text
                , bytestring
                , cryptonite
                , arivi-network
                , network
                , arivi-crypto
                , memory
                , time
                , string-conv
                , directory
                , mtl
                , monad-logger
                , async
                , arivi-utils
                , stm
                , lifted-async

  default-language:    Haskell2010
 
