name:        service
version:     0.1.0.0
synopsis:    Services running on p2p.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Unknown
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  hs-source-dirs: lib
  build-depends:       async
                    ,  base >=4.9 && <4.11
                    ,  base16-bytestring
                    ,  binary >= 0.8.3.0
                    ,  bytes
                    ,  bytestring
                    ,  configurator >= 0.3.0.0
                    ,  containers
                    ,  crypto-api
                    ,  exceptions
                    ,  fast-logger
                    ,  hashtables <= 1.2.6.1
                    ,  integer-gmp
                    ,  lifted-base
                    ,  lifted-async <= 0.10.0.2
                    ,  memory >= 0.14.11
                    ,  monad-control
                    ,  monad-logger
                    ,  mtl
                    ,  random
                    ,  serialise
                    ,  split
                    ,  stm >= 2.4.5
                    ,  template-haskell
                    ,  text
                    ,  time
                    ,  arivi-utils
                    ,  hashable
                    ,  list-t >= 1.0.0.1
                    ,  either-unwrap >= 1.1
                    ,  sorted-list
                    ,  string-conv
                    ,  arivi-p2p
  ghc-options:  -Wall -Werror  -Wredundant-constraints -fno-defer-type-errors -fno-defer-out-of-scope-variables
  default-extensions:  FlexibleContexts
  exposed-modules:
                         Service.HelloWorld
                       , Service.Types

  default-language:    Haskell2010

executable HelloWorldApp
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:  arivi-p2p
                , service
                , base >=4.9 && <4.11
                , yaml
                , text
                , bytestring
                , cryptonite
                , unordered-containers <= 0.2.9.0
                , arivi-network
                , network
                , arivi-crypto
                , memory
                , time
                , string-conv
                , directory
                , mtl
                , monad-logger
                , async
                , arivi-utils
                , stm
                , lifted-async

  default-language:    Haskell2010

