name:        arivi-utils
version:     0.1.0.0
synopsis:    A generic libarary to build a P2P network.

description: The arivi library is a generic library to build P2P
  network of computational nodes that exchange information from
  time-to-time. The library is agnostic towards the network layer and
  can be plugged in with different protocols as long as it allows the
  exchange of peering information. Network layer for some common
  protocol layers are supported.

homepage:         http://github.com/xoken/arivi
bug-reports:      https://github.com/xoken/arivi/issues

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in
-- copyright:
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md, README.md
cabal-version:      >=1.10

source-repository head
  type: git
  location: https://github.com/xoken/arivi/

library
  build-depends:       base < 5
                    ,  serialise
                    ,  cryptonite
                    ,  containers
                    ,  exceptions
                    ,  text
                    ,  lifted-base
                    ,  lifted-async
                    ,  monad-control
                    ,  mtl >= 2.2.2
                    ,  monad-control
                    ,  monad-logger
                    ,  statsd-client >= 0.3.0.0
                    ,  stm >= 2.4.4.1
                    ,  template-haskell
                    ,  time-units >= 1.0.0
                    ,  time
                    ,  network
  ghc-options:        -Wall -fno-defer-type-errors -fno-defer-out-of-scope-variables
  exposed-modules:
                       Arivi.Utils.Logging
                       Arivi.Utils.Statsd
                       Arivi.Utils.Set

  default-language:    Haskell2010
